public enum FeatNodeKind
{
	StatsBonus,
	Ability,
	Passive,
	Form
}